Save custom boards as JSON, spectators in match